service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  labels:
    app: todo-app
spec:
  selector:
    app: todo-app
  ports:
  - port: 80
    targetPort: 4000
    protocol: TCP
  type: LoadBalancer
